cli/tests/testdata/report_error.ts.out
1
error: Uncaught Error: foo
reportError(new Error("foo"));
            ^
    at [WILDCARD]/report_error.ts:2:13
2
error: Uncaught Error: Unhandled error event from 'reportError()'.
    at handleReportErrorMacrotask (deno:ext/web/16_report_error.js:[WILDCARD])
